@@ -1,14 +1,14 @@
 # Application template recipe for the rails_apps_composer. Change the recipe here:
-# https://github.com/RailsApps/rails_apps_composer/blob/master/recipes/all.rb
+# https://github.com/RailsApps/rails_apps_composer/blob/master/recipes/core.rb
 
 ## Git
-say_wizard "selected all recipes"
+say_wizard "selected all core recipes"
 
 __END__
 
-name: all
-description: "Select all available recipes."
+name: core
+description: "Select all core recipes."
 author: RailsApps
 
 requires: [git, railsapps, setup, readme, gems, testing, auth, email, models, controllers, views, routes, frontend, init, extras]
-category: all
+category: collections
